bin/testsuite/tests/compiler/src/errors/compiler5869.swg
#global testerror "Err0697"

struct A {}
impl A
{

    #[Swag.Macro]
    mtd(x: bool, y: bool) opVisittto(s: #code void) {}
}
